removing scratch files

--- a/Refactoring_Pymc3_Multiple_Symbolic_Backends.ipynb
+++ b/Refactoring_Pymc3_Multiple_Symbolic_Backends.ipynb
@@ -61,13 +61,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Overview of code changed"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "In order to run the basic example, I needed to alter the following modules: \n",
     "- `__init__.py`\n",
     "- `model.py`\n",
@@ -78,7 +71,14 @@
     "- `step_methods/compound.py`\n",
     "\n",
     "\n",
-    "However, I also heavily **commented code** that I did not want to change yet. For example, I only kept the `Normal` distribution in `continuous.py`, and commented all the rest out. \n"
+    "However, I also heavily commented code that I did not want to change yet. For example, I only kept the `Normal` distribution in `continuous.py`, and commented all the rest out. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A new module: 'Backends_Symbolic'"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "source": [
     "\n",
     "Much of the Theano functionality is either directly imported from Theano at the top of each module, or imported from\n",
-    "pymc3 modules such as `theanof.py` or `math.py`. I commented these imports and instead import all the necessary functionality from my new module called `symbolic_backends`.\n"
+    "pymc3 modules such as `theanof.py` or `math.py`. I commented these imports and instead import all the necessary functionality from my new module called `backends_symbolic`.\n"
    ]
   },
   {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1241,60 +1241,20 @@
        "<span class=\"sd\">    -------</span>\n",
        "<span class=\"sd\">        A TensorFlow session.</span>\n",
        "<span class=\"sd\">    &quot;&quot;&quot;</span>\n",
-       "    <span class=\"k\">global</span> <span class=\"n\">_SESSION</span>\n",
-       "\n",
-       "    <span class=\"n\">default_session</span> <span class=\"o\">=</span> <span class=\"n\">tf</span><span class=\"o\">.</span><span class=\"n\">get_default_session</span><span class=\"p\">()</span>\n",
-       "\n",
-       "    <span class=\"k\">if</span> <span class=\"n\">default_session</span> <span class=\"ow\">is</span> <span class=\"ow\">not</span> <span class=\"bp\">None</span><span class=\"p\">:</span>\n",
-       "        <span class=\"n\">session</span> <span class=\"o\">=</span> <span class=\"n\">default_session</span>\n",
-       "    <span class=\"k\">else</span><span class=\"p\">:</span>\n",
-       "        <span class=\"k\">if</span> <span class=\"n\">_SESSION</span> <span class=\"ow\">is</span> <span class=\"bp\">None</span><span class=\"p\">:</span>\n",
-       "            <span class=\"k\">if</span> <span class=\"ow\">not</span> <span class=\"n\">os</span><span class=\"o\">.</span><span class=\"n\">environ</span><span class=\"o\">.</span><span class=\"n\">get</span><span class=\"p\">(</span><span class=\"s1\">&#39;OMP_NUM_THREADS&#39;</span><span class=\"p\">):</span>\n",
-       "                <span class=\"n\">config</span> <span class=\"o\">=</span> <span class=\"n\">tf</span><span class=\"o\">.</span><span class=\"n\">ConfigProto</span><span class=\"p\">(</span><span class=\"n\">allow_soft_placement</span><span class=\"o\">=</span><span class=\"bp\">True</span><span class=\"p\">)</span>\n",
-       "            <span class=\"k\">else</span><span class=\"p\">:</span>\n",
-       "                <span class=\"n\">num_thread</span> <span class=\"o\">=</span> <span class=\"nb\">int</span><span class=\"p\">(</span><span class=\"n\">os</span><span class=\"o\">.</span><span class=\"n\">environ</span><span class=\"o\">.</span><span class=\"n\">get</span><span class=\"p\">(</span><span class=\"s1\">&#39;OMP_NUM_THREADS&#39;</span><span class=\"p\">))</span>\n",
-       "                <span class=\"n\">config</span> <span class=\"o\">=</span> <span class=\"n\">tf</span><span class=\"o\">.</span><span class=\"n\">ConfigProto</span><span class=\"p\">(</span><span class=\"n\">intra_op_parallelism_threads</span><span class=\"o\">=</span><span class=\"n\">num_thread</span><span class=\"p\">,</span>\n",
-       "                                        <span class=\"n\">allow_soft_placement</span><span class=\"o\">=</span><span class=\"bp\">True</span><span class=\"p\">)</span>\n",
-       "            <span class=\"n\">_SESSION</span> <span class=\"o\">=</span> <span class=\"n\">tf</span><span class=\"o\">.</span><span class=\"n\">Session</span><span class=\"p\">(</span><span class=\"n\">config</span><span class=\"o\">=</span><span class=\"n\">config</span><span class=\"p\">)</span>\n",
-       "        <span class=\"n\">session</span> <span class=\"o\">=</span> <span class=\"n\">_SESSION</span>\n",
-       "    <span class=\"k\">if</span> <span class=\"ow\">not</span> <span class=\"n\">_MANUAL_VAR_INIT</span><span class=\"p\">:</span>\n",
-       "        <span class=\"k\">with</span> <span class=\"n\">session</span><span class=\"o\">.</span><span class=\"n\">graph</span><span class=\"o\">.</span><span class=\"n\">as_default</span><span class=\"p\">():</span>\n",
-       "            <span class=\"n\">variables</span> <span class=\"o\">=</span> <span class=\"n\">tf</span><span class=\"o\">.</span><span class=\"n\">global_variables</span><span class=\"p\">()</span>\n",
-       "            <span class=\"n\">candidate_vars</span> <span class=\"o\">=</span> <span class=\"p\">[]</span>\n",
-       "            <span class=\"k\">for</span> <span class=\"n\">v</span> <span class=\"ow\">in</span> <span class=\"n\">variables</span><span class=\"p\">:</span>\n",
-       "                <span class=\"k\">if</span> <span class=\"ow\">not</span> <span class=\"nb\">getattr</span><span class=\"p\">(</span><span class=\"n\">v</span><span class=\"p\">,</span> <span class=\"s1\">&#39;_keras_initialized&#39;</span><span class=\"p\">,</span> <span class=\"bp\">False</span><span class=\"p\">):</span>\n",
-       "                    <span class=\"n\">candidate_vars</span><span class=\"o\">.</span><span class=\"n\">append</span><span class=\"p\">(</span><span class=\"n\">v</span><span class=\"p\">)</span>\n",
-       "            <span class=\"k\">if</span> <span class=\"n\">candidate_vars</span><span class=\"p\">:</span>\n",
-       "                <span class=\"c1\"># This step is expensive, so we only run it on variables</span>\n",
-       "                <span class=\"c1\"># not already marked as initialized.</span>\n",
-       "                <span class=\"n\">is_initialized</span> <span class=\"o\">=</span> <span class=\"n\">session</span><span class=\"o\">.</span><span class=\"n\">run</span><span class=\"p\">(</span>\n",
-       "                    <span class=\"p\">[</span><span class=\"n\">tf</span><span class=\"o\">.</span><span class=\"n\">is_variable_initialized</span><span class=\"p\">(</span><span class=\"n\">v</span><span class=\"p\">)</span> <span class=\"k\">for</span> <span class=\"n\">v</span> <span class=\"ow\">in</span> <span class=\"n\">candidate_vars</span><span class=\"p\">])</span>\n",
-       "                <span class=\"n\">uninitialized_vars</span> <span class=\"o\">=</span> <span class=\"p\">[]</span>\n",
-       "                <span class=\"k\">for</span> <span class=\"n\">flag</span><span class=\"p\">,</span> <span class=\"n\">v</span> <span class=\"ow\">in</span> <span class=\"nb\">zip</span><span class=\"p\">(</span><span class=\"n\">is_initialized</span><span class=\"p\">,</span> <span class=\"n\">candidate_vars</span><span class=\"p\">):</span>\n",
-       "                    <span class=\"k\">if</span> <span class=\"ow\">not</span> <span class=\"n\">flag</span><span class=\"p\">:</span>\n",
-       "                        <span class=\"n\">uninitialized_vars</span><span class=\"o\">.</span><span class=\"n\">append</span><span class=\"p\">(</span><span class=\"n\">v</span><span class=\"p\">)</span>\n",
-       "                    <span class=\"n\">v</span><span class=\"o\">.</span><span class=\"n\">_keras_initialized</span> <span class=\"o\">=</span> <span class=\"bp\">True</span>\n",
-       "                <span class=\"k\">if</span> <span class=\"n\">uninitialized_vars</span><span class=\"p\">:</span>\n",
-       "                    <span class=\"n\">session</span><span class=\"o\">.</span><span class=\"n\">run</span><span class=\"p\">(</span><span class=\"n\">tf</span><span class=\"o\">.</span><span class=\"n\">variables_initializer</span><span class=\"p\">(</span><span class=\"n\">uninitialized_vars</span><span class=\"p\">))</span>\n",
-       "    <span class=\"c1\"># hack for list_devices() function.</span>\n",
-       "    <span class=\"c1\"># list_devices() function is not available under tensorflow r1.3.</span>\n",
-       "    <span class=\"k\">if</span> <span class=\"ow\">not</span> <span class=\"nb\">hasattr</span><span class=\"p\">(</span><span class=\"n\">session</span><span class=\"p\">,</span> <span class=\"s1\">&#39;list_devices&#39;</span><span class=\"p\">):</span>\n",
-       "        <span class=\"n\">session</span><span class=\"o\">.</span><span class=\"n\">list_devices</span> <span class=\"o\">=</span> <span class=\"k\">lambda</span><span class=\"p\">:</span> <span class=\"n\">device_lib</span><span class=\"o\">.</span><span class=\"n\">list_local_devices</span><span class=\"p\">()</span>\n",
-       "    <span class=\"k\">return</span> <span class=\"n\">session</span>\n",
        "</pre></div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "file = 'backends_symbolic/backends_tf.py'\n",
-    "lines=[80,130]\n",
+    "lines=[80,88]\n",
     "display_code(file,lines)"
    ]
   },
@@ -1740,7 +1700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `Function` class is used for when pymc's `Model` class compiles the likelihood function using the `logp` output variables and the various input variables. \n"
+    "This `Function` class is used for when pymc's `Model` class compiles the likelihood function using the `logp` output variables and the various input variables.\n"
    ]
   },
   {
@@ -1871,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1945,8 +1905,7 @@
        ".highlight .vg { color: #19177C } /* Name.Variable.Global */\n",
        ".highlight .vi { color: #19177C } /* Name.Variable.Instance */\n",
        ".highlight .vm { color: #19177C } /* Name.Variable.Magic */\n",
-       ".highlight .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span>    <span class=\"c1\">### changed the default mu to float so tensorflow doesn&#39;t have to recast</span>\n",
-       "    <span class=\"k\">def</span> <span class=\"fm\">__init__</span><span class=\"p\">(</span><span class=\"bp\">self</span><span class=\"p\">,</span> <span class=\"n\">mu</span><span class=\"o\">=</span><span class=\"mf\">0.0</span><span class=\"p\">,</span> <span class=\"n\">sd</span><span class=\"o\">=</span><span class=\"bp\">None</span><span class=\"p\">,</span> <span class=\"n\">tau</span><span class=\"o\">=</span><span class=\"bp\">None</span><span class=\"p\">,</span> <span class=\"o\">**</span><span class=\"n\">kwargs</span><span class=\"p\">):</span>\n",
+       ".highlight .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span>    <span class=\"k\">def</span> <span class=\"fm\">__init__</span><span class=\"p\">(</span><span class=\"bp\">self</span><span class=\"p\">,</span> <span class=\"n\">mu</span><span class=\"o\">=</span><span class=\"mf\">0.0</span><span class=\"p\">,</span> <span class=\"n\">sd</span><span class=\"o\">=</span><span class=\"bp\">None</span><span class=\"p\">,</span> <span class=\"n\">tau</span><span class=\"o\">=</span><span class=\"bp\">None</span><span class=\"p\">,</span> <span class=\"o\">**</span><span class=\"n\">kwargs</span><span class=\"p\">):</span>\n",
        "        <span class=\"n\">tau</span><span class=\"p\">,</span> <span class=\"n\">sd</span> <span class=\"o\">=</span> <span class=\"n\">get_tau_sd</span><span class=\"p\">(</span><span class=\"n\">tau</span><span class=\"o\">=</span><span class=\"n\">tau</span><span class=\"p\">,</span> <span class=\"n\">sd</span><span class=\"o\">=</span><span class=\"n\">sd</span><span class=\"p\">)</span>\n",
        "\n",
        "        <span class=\"c1\">## CHANGED:</span>\n",
@@ -1959,14 +1918,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "file = 'distributions/continuous.py'\n",
-    "lines=[296,304]\n",
+    "lines=[297,304]\n",
     "display_code(file,lines)"
    ]
   },
@@ -1974,7 +1933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the symbolic definition of the loglikelihood. These are the outputs in the computation graph and with the inputs will be be compiled into a Theano function or fed to a TensorFlow session. "
+    "It also contains the symbolic definition of the loglikelihood. These are the 'outputs' in the computation graph and with the 'inputs' will be be compiled into a Theano function or fed to a TensorFlow session. "
    ]
   },
   {
