--- a/Refactoring_Pymc3_Multiple_Symbolic_Backends.ipynb
+++ b/Refactoring_Pymc3_Multiple_Symbolic_Backends.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\" style=\"margin-top: 1em;\"><ul class=\"toc-item\"><li><span><a href=\"#Scope-of-the-Project\" data-toc-modified-id=\"Scope-of-the-Project-1\">Scope of the Project</a></span></li><li><span><a href=\"#Changes-to-the-PyMC3-Code-Base\" data-toc-modified-id=\"Changes-to-the-PyMC3-Code-Base-2\">Changes to the PyMC3 Code Base</a></span><ul class=\"toc-item\"><li><span><a href=\"#A-new-module:-'Backends_Symbolic'\" data-toc-modified-id=\"A-new-module:-'Backends_Symbolic'-2.1\">A new module: 'Backends_Symbolic'</a></span></li><li><span><a href=\"#Changes-needed-for-model.py\" data-toc-modified-id=\"Changes-needed-for-model.py-2.2\">Changes needed for model.py</a></span><ul class=\"toc-item\"><li><span><a href=\"#TensorVariables\" data-toc-modified-id=\"TensorVariables-2.2.1\">TensorVariables</a></span></li><li><span><a href=\"#TensorVariable-related-functions\" data-toc-modified-id=\"TensorVariable-related-functions-2.2.2\">TensorVariable-related functions</a></span></li></ul></li><li><span><a href=\"#Changes-needed-for-distribution.py\" data-toc-modified-id=\"Changes-needed-for-distribution.py-2.3\">Changes needed for distribution.py</a></span><ul class=\"toc-item\"><li><span><a href=\"#Getting-Values-from-Symbolic-Variables\" data-toc-modified-id=\"Getting-Values-from-Symbolic-Variables-2.3.1\">Getting Values from Symbolic Variables</a></span></li><li><span><a href=\"#TensorFlow-Sessions\" data-toc-modified-id=\"TensorFlow-Sessions-2.3.2\">TensorFlow Sessions</a></span></li><li><span><a href=\"#Functions\" data-toc-modified-id=\"Functions-2.3.3\">Functions</a></span></li></ul></li><li><span><a href=\"#Changes-needed-for-continuous.py\" data-toc-modified-id=\"Changes-needed-for-continuous.py-2.4\">Changes needed for continuous.py</a></span><ul class=\"toc-item\"><li><span><a href=\"#Basic-Math\" data-toc-modified-id=\"Basic-Math-2.4.1\">Basic Math</a></span></li></ul></li><li><span><a href=\"#Changes-needed-for-arraystep.py\" data-toc-modified-id=\"Changes-needed-for-arraystep.py-2.5\">Changes needed for arraystep.py</a></span></li><li><span><a href=\"#Changes-needed-for-metropolis.py\" data-toc-modified-id=\"Changes-needed-for-metropolis.py-2.6\">Changes needed for metropolis.py</a></span></li></ul></li><li><span><a href=\"#Test-Case:-A-Motivating-Example:-Linear-Regression\" data-toc-modified-id=\"Test-Case:-A-Motivating-Example:-Linear-Regression-3\">Test Case: A Motivating Example: Linear Regression</a></span><ul class=\"toc-item\"><li><span><a href=\"#Running-with-original-pymc3-code-(restart-kernel)\" data-toc-modified-id=\"Running-with-original-pymc3-code-(restart-kernel)-3.1\">Running with original pymc3 code (restart kernel)</a></span></li><li><span><a href=\"#Running-with-Theano-backend-(restart-kernel-for-a-fresh-import)\" data-toc-modified-id=\"Running-with-Theano-backend-(restart-kernel-for-a-fresh-import)-3.2\">Running with Theano backend (restart kernel for a fresh import)</a></span></li><li><span><a href=\"#Running-with-TensorFlow-backend-(restart-kernel-for-a-fresh-import)\" data-toc-modified-id=\"Running-with-TensorFlow-backend-(restart-kernel-for-a-fresh-import)-3.3\">Running with TensorFlow backend (restart kernel for a fresh import)</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Scope of the Project\n",
@@ -2946,7 +2956,7 @@
    "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": true
